--- a/result/2022-01-13.md
+++ b/result/2022-01-13.md
@@ -9,16 +9,16 @@
 9. [推动党史学习教育常态化长效化](https://s.weibo.com//weibo?q=%23%E6%8E%A8%E5%8A%A8%E5%85%9A%E5%8F%B2%E5%AD%A6%E4%B9%A0%E6%95%99%E8%82%B2%E5%B8%B8%E6%80%81%E5%8C%96%E9%95%BF%E6%95%88%E5%8C%96%23&Refer=top) 1640145
 10. [整个朋友圈都去滑雪了](https://s.weibo.com//weibo?q=%E6%95%B4%E4%B8%AA%E6%9C%8B%E5%8F%8B%E5%9C%88%E9%83%BD%E5%8E%BB%E6%BB%91%E9%9B%AA%E4%BA%86&Refer=top) 1635860
 11. [2022春节档双玺临门](https://s.weibo.com//weibo?q=%232022%E6%98%A5%E8%8A%82%E6%A1%A3%E5%8F%8C%E7%8E%BA%E4%B8%B4%E9%97%A8%23&Refer=top) 1601589
-12. [不要在黑暗中玩手机](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E8%A6%81%E5%9C%A8%E9%BB%91%E6%9A%97%E4%B8%AD%E7%8E%A9%E6%89%8B%E6%9C%BA%23&Refer=top) 1485731
-13. [大连1例阳性系感染奥密克戎](https://s.weibo.com//weibo?q=%23%E5%A4%A7%E8%BF%9E1%E4%BE%8B%E9%98%B3%E6%80%A7%E7%B3%BB%E6%84%9F%E6%9F%93%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 1347143
-14. [成年人最顶级的自律](https://s.weibo.com//weibo?q=%23%E6%88%90%E5%B9%B4%E4%BA%BA%E6%9C%80%E9%A1%B6%E7%BA%A7%E7%9A%84%E8%87%AA%E5%BE%8B%23&Refer=top) 1318863
-15. [环球港](https://s.weibo.com//weibo?q=%E7%8E%AF%E7%90%83%E6%B8%AF&Refer=top) 1294478
-16. [天津返大连感染学生称遭到网暴](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E8%BF%94%E5%A4%A7%E8%BF%9E%E6%84%9F%E6%9F%93%E5%AD%A6%E7%94%9F%E7%A7%B0%E9%81%AD%E5%88%B0%E7%BD%91%E6%9A%B4%23&Refer=top) 1098610
-17. [上海孕妇](https://s.weibo.com//weibo?q=%E4%B8%8A%E6%B5%B7%E5%AD%95%E5%A6%87&Refer=top) 995622
-18. [郑州人均住户存款7万1](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E%E4%BA%BA%E5%9D%87%E4%BD%8F%E6%88%B7%E5%AD%98%E6%AC%BE7%E4%B8%871%23&Refer=top) 981432
-19. [威少](https://s.weibo.com//weibo?q=%E5%A8%81%E5%B0%91&Refer=top) 978457
-20. [花7000元送狗上学男子考虑弃养](https://s.weibo.com//weibo?q=%23%E8%8A%B17000%E5%85%83%E9%80%81%E7%8B%97%E4%B8%8A%E5%AD%A6%E7%94%B7%E5%AD%90%E8%80%83%E8%99%91%E5%BC%83%E5%85%BB%23&Refer=top) 973737
-21. [除了头孢吃这些药也不能喝酒](https://s.weibo.com//weibo?q=%23%E9%99%A4%E4%BA%86%E5%A4%B4%E5%AD%A2%E5%90%83%E8%BF%99%E4%BA%9B%E8%8D%AF%E4%B9%9F%E4%B8%8D%E8%83%BD%E5%96%9D%E9%85%92%23&Refer=top) 968335
+12. [威少](https://s.weibo.com//weibo?q=%E5%A8%81%E5%B0%91&Refer=top) 1595378
+13. [不要在黑暗中玩手机](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E8%A6%81%E5%9C%A8%E9%BB%91%E6%9A%97%E4%B8%AD%E7%8E%A9%E6%89%8B%E6%9C%BA%23&Refer=top) 1485731
+14. [大连1例阳性系感染奥密克戎](https://s.weibo.com//weibo?q=%23%E5%A4%A7%E8%BF%9E1%E4%BE%8B%E9%98%B3%E6%80%A7%E7%B3%BB%E6%84%9F%E6%9F%93%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 1347143
+15. [成年人最顶级的自律](https://s.weibo.com//weibo?q=%23%E6%88%90%E5%B9%B4%E4%BA%BA%E6%9C%80%E9%A1%B6%E7%BA%A7%E7%9A%84%E8%87%AA%E5%BE%8B%23&Refer=top) 1318863
+16. [环球港](https://s.weibo.com//weibo?q=%E7%8E%AF%E7%90%83%E6%B8%AF&Refer=top) 1294478
+17. [天津返大连感染学生称遭到网暴](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E8%BF%94%E5%A4%A7%E8%BF%9E%E6%84%9F%E6%9F%93%E5%AD%A6%E7%94%9F%E7%A7%B0%E9%81%AD%E5%88%B0%E7%BD%91%E6%9A%B4%23&Refer=top) 1098610
+18. [除了头孢吃这些药也不能喝酒](https://s.weibo.com//weibo?q=%23%E9%99%A4%E4%BA%86%E5%A4%B4%E5%AD%A2%E5%90%83%E8%BF%99%E4%BA%9B%E8%8D%AF%E4%B9%9F%E4%B8%8D%E8%83%BD%E5%96%9D%E9%85%92%23&Refer=top) 1086668
+19. [上海孕妇](https://s.weibo.com//weibo?q=%E4%B8%8A%E6%B5%B7%E5%AD%95%E5%A6%87&Refer=top) 995622
+20. [郑州人均住户存款7万1](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E%E4%BA%BA%E5%9D%87%E4%BD%8F%E6%88%B7%E5%AD%98%E6%AC%BE7%E4%B8%871%23&Refer=top) 981432
+21. [花7000元送狗上学男子考虑弃养](https://s.weibo.com//weibo?q=%23%E8%8A%B17000%E5%85%83%E9%80%81%E7%8B%97%E4%B8%8A%E5%AD%A6%E7%94%B7%E5%AD%90%E8%80%83%E8%99%91%E5%BC%83%E5%85%BB%23&Refer=top) 973737
 22. [多家银行清退保本型理财](https://s.weibo.com//weibo?q=%23%E5%A4%9A%E5%AE%B6%E9%93%B6%E8%A1%8C%E6%B8%85%E9%80%80%E4%BF%9D%E6%9C%AC%E5%9E%8B%E7%90%86%E8%B4%A2%23&Refer=top) 923175
 23. [广东中山报告1例新冠阳性](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E4%B8%9C%E4%B8%AD%E5%B1%B1%E6%8A%A5%E5%91%8A1%E4%BE%8B%E6%96%B0%E5%86%A0%E9%98%B3%E6%80%A7%23&Refer=top) 858190
 24. [考驾照时登记的照片有多重要](https://s.weibo.com//weibo?q=%23%E8%80%83%E9%A9%BE%E7%85%A7%E6%97%B6%E7%99%BB%E8%AE%B0%E7%9A%84%E7%85%A7%E7%89%87%E6%9C%89%E5%A4%9A%E9%87%8D%E8%A6%81%23&Refer=top) 852565
